infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      name: client-pod
      labels:
        app: client-app
    spec:
      containers:
        - name: client-container
          image: govindrajen/client-app
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv

spec:
  type: NodePort
  selector:
    app: client-app
  ports: 
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
