infra/k8s/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 30002
